--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Run Selenium Tests
+name: Selenium Test Automation
 
 on:
   push:
@@ -10,38 +10,28 @@ on:
 
 jobs:
   selenium-tests:
-    runs-on: ubuntu-latest  # Use Ubuntu for the runner
+    runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        browser: [chrome, firefox]  # Run tests on both Chrome and Firefox
+        browser: [chrome, firefox]
 
     steps:
-      # Step 1: Checkout code
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Step 2: Set up Python
-      - name: Set up Python 3.8
-        uses: actions/setup-python@v3
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
-          python-version: 3.8
+          python-version: "3.9"
 
-      # Step 3: Install dependencies
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install pytest selenium webdriver-manager
 
-
-      # Step 4: Run the tests
-      - name: Run tests with pytest
+      - name: Run Selenium tests
+        env:
+          BROWSER: ${{ matrix.browser }}
         run: |
-          pytest tests/qa_selenium_test.py --browser ${{ matrix.browser }} -v
-
-      # Step 5: Upload test results
-      - name: Upload Test Results
-        uses: actions/upload-artifact@v3
-        with:
-          name: selenium-test-results
-          path: test-results/
+          pytest -v --tb=short test_script.py
