--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,10 +29,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pytest selenium webdriver-manager
-          pip install behave
 
       - name: Run Selenium tests
         env:
           BROWSER: ${{ matrix.browser }}
         run: |
-          behave
+          pytest -v --tb=short tests/
